--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-qwik": "^1.4.5",
     "prettier": "^3.2.4",
     "typescript": "5.3.3",
