--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "undici": "*",
     "vite": "^5.0.12",
     "vite-tsconfig-paths": "^4.2.1"
+  },
+  "dependencies": {
+    "@unocss/reset": "^0.58.5"
   }
 }
