--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "dependencies": {
-    "@unocss/reset": "^0.58.5"
+    "@unocss/reset": "^0.58.5",
+    "remixicon": "^4.1.0"
   }
 }
