chore: Add Fira Code font dependency
Added the Fira Code font dependency to the project's package.json file. This font will be used throughout the application, enhancing its visual appeal and readability.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "dependencies": {
+    "@fontsource/fira-code": "^5.0.16",
     "@unocss/reset": "^0.58.5",
     "remixicon": "^4.1.0"
   }
