--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-qwik": "^1.4.5",
     "prettier": "^3.2.4",
+    "stylelint": "^16.2.1",
+    "stylelint-config-standard": "^36.0.0",
     "typescript": "5.3.3",
     "undici": "*",
     "vite": "^5.0.12",
