--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
-    "lint": "eslint 'src/**/*.ts*'",
+    "lint": "eslint 'src/**/*.ts*' & stylelint 'src/**/*.css'",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
