--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint 'src/**/*.ts*' & stylelint 'src/**/*.css'",
+    "lint.fix": "eslint 'src/**/*.ts*' --fix & stylelint 'src/**/*.css' --fix",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
