chore: Update "fmt" scripts to "format" in package.json
The script names related to prettier in package.json have been updated for better readability. "fmt" has been renamed to "format", thus, the tasks formerly known as "fmt" and "fmt.check" are now "format" and "format.check" respectively.

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "fmt": "prettier --write .",
-    "fmt.check": "prettier --check .",
+    "format": "prettier --write .",
+    "format.check": "prettier --check .",
     "lint": "eslint 'src/**/*.ts*' & stylelint 'src/**/*.css'",
     "lint.fix": "eslint 'src/**/*.ts*' --fix & stylelint 'src/**/*.css' --fix",
     "preview": "qwik build preview && vite preview --open",
