--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "format": "prettier --write .",
     "format.check": "prettier --check .",
-    "lint": "eslint 'src/**/*.ts*' & stylelint 'src/**/*.css'",
-    "lint.fix": "eslint 'src/**/*.ts*' --fix & stylelint 'src/**/*.css' --fix",
+    "lint": "eslint \"src/**/*.ts*\" & stylelint \"src/**/*.css\"",
+    "lint.fix": "eslint \"src/**/*.ts*\" --fix & stylelint \"src/**/*.css\" --fix",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
