--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-qwik": "^1.4.5",
     "prettier": "^3.2.4",
     "stylelint": "^16.2.1",
+    "stylelint-config-recess-order": "^4.6.0",
     "stylelint-config-standard": "^36.0.0",
     "typescript": "5.3.3",
     "undici": "*",
