--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lint.fix": "eslint \"src/**/*.ts*\" --fix & stylelint \"src/**/*.css\" --fix",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
@@ -34,6 +35,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-qwik": "^1.4.5",
+    "husky": "^9.0.11",
     "prettier": "^3.2.4",
     "stylelint": "^16.2.1",
     "stylelint-config-recess-order": "^4.6.0",
