--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "stylelint": "^16.2.1",
     "stylelint-config-recess-order": "^4.6.0",
     "stylelint-config-standard": "^36.0.0",
+    "textlint": "^14.0.3",
     "typescript": "5.3.3",
     "undici": "*",
     "vite": "^5.0.12",
