--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "stylelint-config-recess-order": "^4.6.0",
     "stylelint-config-standard": "^36.0.0",
     "textlint": "^14.0.3",
+    "textlint-rule-alive-link": "^0.1.2",
     "textlint-rule-no-dead-link": "^5.1.2",
     "typescript": "5.3.3",
     "undici": "*",
