--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@textlint-rule/textlint-rule-no-unmatched-pair": "^2.0.2",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.6",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
