--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@textlint-rule/textlint-rule-no-duplicate-abbr": "^1.0.2",
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^2.0.2",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.6",
@@ -43,6 +44,9 @@
     "stylelint-config-standard": "^36.0.0",
     "textlint": "^14.0.3",
     "textlint-rule-alive-link": "^0.1.2",
+    "textlint-rule-doubled-spaces": "^1.0.2",
+    "textlint-rule-footnote-order": "^1.0.3",
+    "textlint-rule-no-zero-width-spaces": "^1.0.1",
     "typescript": "5.3.3",
     "undici": "*",
     "vite": "^5.0.12",
