--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "format": "prettier --write .",
     "format.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\" & stylelint \"src/**/*.css\" & textlint \"**/*.md\"",
-    "lint.fix": "eslint \"src/**/*.ts*\" --fix & stylelint \"src/**/*.css\" --fix & textlint \"**/*.md\" --fix",
+    "lint": "eslint \"src/**/*.ts*\" & stylelint \"src/**/*.css\" & textlint \"{README.md,src/**/*.md}\"",
+    "lint.fix": "eslint \"src/**/*.ts*\" --fix & stylelint \"src/**/*.css\" --fix & textlint \"{README.md,src/**/*.md}\" --fix",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "qwik": "qwik",
