--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "stylelint-config-standard": "^36.0.0",
     "textlint": "^14.0.3",
     "textlint-rule-alive-link": "^0.1.2",
+    "textlint-rule-apostrophe": "^2.0.0",
+    "textlint-rule-diacritics": "^1.0.0",
     "textlint-rule-doubled-spaces": "^1.0.2",
+    "textlint-rule-en-capitalization": "^2.0.3",
     "textlint-rule-footnote-order": "^1.0.3",
     "textlint-rule-no-zero-width-spaces": "^1.0.1",
     "typescript": "5.3.3",
