--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "stylelint-config-recess-order": "^4.6.0",
     "stylelint-config-standard": "^36.0.0",
     "textlint": "^14.0.3",
+    "textlint-rule-alex": "^5.0.0",
     "textlint-rule-alive-link": "^0.1.2",
     "textlint-rule-apostrophe": "^2.0.0",
     "textlint-rule-diacritics": "^1.0.0",
