--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "textlint-rule-en-capitalization": "^2.0.3",
     "textlint-rule-footnote-order": "^1.0.3",
     "textlint-rule-no-zero-width-spaces": "^1.0.1",
+    "textlint-rule-preset-japanese": "^10.0.3",
     "textlint-rule-preset-jtf-style": "^2.3.14",
     "typescript": "5.3.3",
     "undici": "*",
