--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.6.1",
     "@textlint-rule/textlint-rule-no-duplicate-abbr": "^1.0.2",
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^2.0.2",
     "@types/eslint": "^8.56.2",
