--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "format": "prettier --write .",
-    "format.check": "prettier --check .",
+    "format": "prettier --write . & bunx @biomejs/biome format --write .",
+    "format.check": "prettier --check . & bunx @biomejs/biome format .",
     "lint": "eslint \"src/**/*.ts*\" & stylelint \"src/**/*.css\" & textlint \"{README.md,src/**/*.md}\"",
     "lint.fix": "eslint \"src/**/*.ts*\" --fix & stylelint \"src/**/*.css\" --fix & textlint \"{README.md,src/**/*.md}\" --fix",
     "preview": "qwik build preview && vite preview --open",
