refactor: Simplify array format in code files
This commit updates the formatting of array elements in package.json and vite.config.ts files. As a periodic code cleanup, the elements in the "trustedDependencies" and "plugins" arrays are now written inline, as opposed to being listed individually, helping to streamline the code.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "node": ">=15.0.0"
   },
   "private": true,
-  "trustedDependencies": [
-    "sharp"
-  ],
+  "trustedDependencies": ["sharp"],
   "type": "module",
   "scripts": {
     "build": "qwik build",
