chore: Add 'ignore' rules in biome.json
Extended the 'ignore' rule in the biome.json file to exclude various files and directories from the scope of the associated service. This can help in focusing the service on pertinent files and enhancing performance. Different types of logs and specific file types and directories have been included in the updated ignore list.

--- a/biome.json
+++ b/biome.json
@@ -7,6 +7,37 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true
-		}
+		},
+		"ignore": [
+			"/dist",
+			"/lib",
+			"/lib-types",
+			"/server",
+			"node_modules",
+			"*.local",
+			".cache",
+			".mf",
+			".rollup.cache",
+			"tsconfig.tsbuildinfo",
+			"logs",
+			"*.log",
+			"npm-debug.log*",
+			"yarn-debug.log*",
+			"yarn-error.log*",
+			"pnpm-debug.log*",
+			"lerna-debug.log*",
+			".vscode/*",
+			"!.vscode/launch.json",
+			"!.vscode/*.code-snippets",
+			".idea",
+			".DS_Store",
+			"*.suo",
+			"*.ntvs*",
+			"*.njsproj",
+			"*.sln",
+			"*.sw?",
+			".yarn/*",
+			"!.yarn/releases"
+		]
 	}
 }
