chore: Update 'ignore' paths in biome.json
Modified the 'ignore' paths in the biome.json file to point to correct directories. The update includes paths like './dist', './lib', './lib-types' and './server', improving the file and directory exclusion efficiency. These changes help ensure only relevant data is processed or tracked by the system.

--- a/biome.json
+++ b/biome.json
@@ -9,10 +9,10 @@
 			"recommended": true
 		},
 		"ignore": [
-			"/dist",
-			"/lib",
-			"/lib-types",
-			"/server",
+			"./dist",
+			"./lib",
+			"./lib-types",
+			"./server",
 			"node_modules",
 			"*.local",
 			".cache",
