--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
 		"format": "prettier --write . & bunx @biomejs/biome format --write .",
 		"format.check": "prettier --check . & bunx @biomejs/biome format .",
-		"lint": "eslint \"src/**/*.ts*\" & stylelint \"src/**/*.css\" & textlint \"{README.md,src/**/*.md}\"",
-		"lint.fix": "eslint \"src/**/*.ts*\" --fix & stylelint \"src/**/*.css\" --fix & textlint \"{README.md,src/**/*.md}\" --fix",
+		"lint": "eslint \"src/**/*.ts*\" & bunx @biomejs/biome lint . & stylelint \"src/**/*.css\" & textlint \"{README.md,src/**/*.md}\"",
+		"lint.fix": "eslint \"src/**/*.ts*\" --fix & bunx @biomejs/biome lint --apply . & stylelint \"src/**/*.css\" --fix & textlint \"{README.md,src/**/*.md}\" --fix",
 		"preview": "qwik build preview && vite preview --open",
 		"start": "vite --open --mode ssr",
 		"qwik": "qwik",
