--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
 		"deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
 		"dev": "vite --mode ssr",
 		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-		"format": "prettier --write . & bunx @biomejs/biome format --write .",
-		"format.check": "prettier --check . & bunx @biomejs/biome format .",
-		"lint": "eslint \"src/**/*.ts*\" & bunx @biomejs/biome lint . & stylelint \"src/**/*.css\" & textlint \"{README.md,src/**/*.md}\"",
-		"lint.fix": "eslint --fix \"src/**/*.ts*\" & bunx @biomejs/biome lint --apply . & stylelint --fix \"src/**/*.css\" & textlint --fix \"{README.md,src/**/*.md}\"",
+		"format": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier --write .\" \"bunx @biomejs/biome format --write .\"",
+		"format.check": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier --check .\" \"bunx @biomejs/biome format .\"",
+		"lint": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#FFF,#259EAC\" \"eslint \\\"src/**/*.ts*\\\"\" \"bunx @biomejs/biome lint .\" \"stylelint \\\"src/**/*.css\\\"\" \"textlint \\\"{README.md,src/**/*.md}\\\"\"",
+		"lint.fix": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#FFF,#259EAC\" \"eslint --fix \\\"src/**/*.ts*\\\"\" \"bunx @biomejs/biome lint --apply .\" \"stylelint --fix \\\"src/**/*.css\\\"\" \"textlint --fix \\\"{README.md,src/**/*.md}\\\"\"",
 		"preview": "qwik build preview && vite preview --open",
 		"start": "vite --open --mode ssr",
 		"qwik": "qwik",
