--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "my-qwik-basic-starter",
-	"description": "Demo App with Routing built-in (recommended)",
+	"name": "taichi-fukuda",
+	"description": "This is a personal website of Taichi Fukuda.",
 	"engines": {
 		"node": ">=15.0.0"
 	},
