chore: Reorganize settings in biome.json
Restructured the order of settings in biome.json. The "linter" parameters have been moved to the end of the file and settings for "files" were added. Such re-arrangement could result in better configuration management and readability of the file.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/biome.json
+++ b/biome.json
@@ -3,11 +3,7 @@
 	"organizeImports": {
 		"enabled": false
 	},
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true
-		},
+	"files": {
 		"ignore": [
 			"./dist",
 			"./lib",
@@ -39,5 +35,11 @@
 			".yarn/*",
 			"!.yarn/releases"
 		]
+	},
+	"linter": {
+		"enabled": true,
+		"rules": {
+			"recommended": true
+		}
 	}
 }
