--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.6.1",
+		"@builder.io/vite-plugin-macro": "~0.0.7",
+		"@pandacss/dev": "^0.30.01",
 		"@textlint-rule/textlint-rule-no-duplicate-abbr": "^1.0.2",
 		"@textlint-rule/textlint-rule-no-unmatched-pair": "^2.0.2",
 		"@types/eslint": "^8.56.2",
