chore: Ignore styled-system in linting and formatting tools
Added src/styled-system to the list of ignored directories in .prettierignore, .gitignore, .stylelintignore, .eslintignore, and biome.json. This change ensures that all the linting and formatting tools avoid the styled-system directory while scanning the codebase.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/biome.json
+++ b/biome.json
@@ -33,7 +33,8 @@
 			"*.sln",
 			"*.sw?",
 			".yarn/*",
-			"!.yarn/releases"
+			"!.yarn/releases",
+			"./src/styled-system"
 		]
 	},
 	"linter": {
