chore: Update file inclusion array in tsconfig.json
In this commit, changes were made to the "files" array within the tsconfig.json file. Several configuration files, including .stylelintrc.js, .stylelintrc.order.cjs, .textlintrc.cjs and .eslintrc.import.cjs, have been added. This change is intended to improve the project setup overview by including all relevant configuration files.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,12 @@
 			"~/*": ["./src/*"]
 		}
 	},
-	"files": ["./.eslintrc.cjs"],
+	"files": [
+		"./.eslintrc.cjs",
+		"./.eslintrc.import.cjs",
+		"./.stylelintrc.js",
+		"./.stylelintrc.order.cjs",
+		"./.textlintrc.cjs"
+	],
 	"include": ["src", "./*.d.ts", "./*.config.ts"]
 }
