chore: Update tsconfig.json configuration
The tsconfig.json file has been adjusted to improve project setup representation, by including more configuration files in the "files" array, such as "panda.config.ts", "postcss.config.js", and "vite.config.ts". Moreover, the "include" array has been refined to only encompass necessary file types: "src" and "./*.d.ts".

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,10 @@
 		"./.eslintrc.import.cjs",
 		"./.stylelintrc.js",
 		"./.stylelintrc.order.cjs",
-		"./.textlintrc.cjs"
+		"./.textlintrc.cjs",
+		"./panda.config.ts",
+		"./postcss.config.js",
+		"./vite.config.ts"
 	],
-	"include": ["src", "./*.d.ts", "./*.config.ts"]
+	"include": ["src", "./*.d.ts"]
 }
