chore: Refactor .stylelintrc.order from commonJS to ES module
The .stylelintrc.order file has been changed from commonJS to ES module syntax. This involved updating the file extension to .js, switching from module.exports to export default, and adjusting the file references in both tsconfig.json and .stylelintrc.js.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
 		"./.eslintrc.cjs",
 		"./.eslintrc.import.cjs",
 		"./.stylelintrc.js",
-		"./.stylelintrc.order.cjs",
+		"./.stylelintrc.order.js",
 		"./.textlintrc.cjs",
 		"./panda.config.ts",
 		"./postcss.config.js",
