chore: Exclude 'src/styled-system' from tsconfig.json
The 'tsconfig.json' file has been updated to exclude the 'src/styled-system' directory. This adjustment narrows down the scope of which files are included in the TypeScript compiler options, optimizing the compilation process for the project.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,6 @@
 		"./postcss.config.js",
 		"./vite.config.ts"
 	],
-	"include": ["src", "./*.d.ts"]
+	"include": ["src", "./*.d.ts"],
+	"exclude": ["src/styled-system"]
 }
