--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-qwik": "^1.4.5",
 		"husky": "^9.0.11",
+		"postcss-load-config": "^5.0.3",
 		"prettier": "^3.2.4",
 		"stylelint": "^16.2.1",
 		"stylelint-config-standard": "^36.0.0",
