chore: Remove exclusions of src/styled-system in configuration files
The references to src/styled-system have been removed from various configuration files including .prettierignore, .gitignore, tsconfig.json, .stylelintignore, .eslintignore, .textlintignore, and biome.json.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/biome.json
+++ b/biome.json
@@ -33,8 +33,7 @@
 			"*.sln",
 			"*.sw?",
 			".yarn/*",
-			"!.yarn/releases",
-			"./src/styled-system"
+			"!.yarn/releases"
 		]
 	},
 	"linter": {
