chore: Rename stylelint configuration files
The .stylelintrc.js and .stylelintrc.order.js files have been renamed to stylelint.config.js and stylelint.config.order.js respectively. Also, all references to the old filenames in tsconfig.json have been updated with the new filenames, ensuring consistency across project configuration files.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,8 @@
 	"files": [
 		"./.eslintrc.cjs",
 		"./.eslintrc.import.cjs",
-		"./.stylelintrc.js",
-		"./.stylelintrc.order.js",
+		"./stylelint.config.js",
+		"./stylelint.config.order.js",
 		"./.textlintrc.cjs",
 		"./vite.config.ts"
 	],
