chore: Update textlint config file path and references
The configuration file for textlint has been renamed from .textlintrc.cjs to textlint.config.cjs. All references to the file in tsconfig.json and package.json have been updated to reflect this change.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
 		"./.eslintrc.import.cjs",
 		"./stylelint.config.js",
 		"./stylelint.config.order.js",
-		"./.textlintrc.cjs",
+		"./textlint.config.cjs",
 		"./vite.config.ts"
 	],
 	"include": ["src", "./*.d.ts"]
