chore: Add Prettier configuration file
A new file, `prettier.config.js`, was created to hold Prettier configuration. This file was also added in the 'tsconfig.json' to maintain the active link between the TypeScript configuration and the new Prettier configuration.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
 		"./.eslintrc.import.cjs",
 		"./stylelint.config.js",
 		"./stylelint.config.order.js",
+		"./prettier.config.js",
 		"./textlint.config.cjs",
 		"./vite.config.ts"
 	],
