chore: Update ESLint config file names and references
This commit renames ESLint configuration files from `.eslintrc.cjs` and `.eslintrc.import.cjs` to `eslint.config.cjs` and `eslint.config.import.cjs`. References to these files in `tsconfig.json` and `package.json` are updated to match the new file names.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
 		}
 	},
 	"files": [
-		"./.eslintrc.cjs",
-		"./.eslintrc.import.cjs",
+		"./eslint.config.cjs",
+		"./eslint.config.import.cjs",
 		"./stylelint.config.js",
 		"./stylelint.config.order.js",
 		"./prettier.config.js",
