chore: Change argument order for linting scripts in package.json
The linting scripts in package.json files have been updated. The changes affect the "lint" and "lint.fix" scripts. The argument order for ESLint and Stylelint commands has been made easier to read.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
 		"format": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier --write .\" \"bunx @biomejs/biome format --write .\"",
 		"format.check": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier --check .\" \"bunx @biomejs/biome format .\"",
-		"lint": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#FFF,#259EAC\" \"eslint \\\"src/**/*.{js,cjs,mjs,jsx,ts,cts,mts,tsx}\\\" -c \\\"./eslint.config.cjs\\\"\" \"bunx @biomejs/biome lint .\" \"stylelint \\\"src/**/*.css\\\"\" \"textlint \\\"{README.md,src/**/*.md}\\\" -c \\\"./textlint.config.cjs\\\"\"",
-		"lint.fix": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#FFF,#259EAC\" \"eslint --fix \\\"src/**/*.{js,cjs,mjs,jsx,ts,cts,mts,tsx}\\\" -c \\\"./eslint.config.cjs\\\"\" \"bunx @biomejs/biome lint --apply .\" \"stylelint --fix \\\"src/**/*.css\\\"\" \"textlint --fix \\\"{README.md,src/**/*.md}\\\" -c \\\"./textlint.config.cjs\\\"\"",
+		"lint": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#FFF,#259EAC\" \"eslint -c \\\"./eslint.config.cjs\\\" \\\"src/**/*.{js,cjs,mjs,jsx,ts,cts,mts,tsx}\\\"\" \"bunx @biomejs/biome lint .\" \"stylelint \\\"src/**/*.css\\\"\" \"textlint -c \\\"./textlint.config.cjs\\\" \\\"{README.md,src/**/*.md}\\\"\"",
+		"lint.fix": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#FFF,#259EAC\" \"eslint -c \\\"./eslint.config.cjs\\\" --fix \\\"src/**/*.{js,cjs,mjs,jsx,ts,cts,mts,tsx}\\\"\" \"bunx @biomejs/biome lint --apply .\" \"stylelint --fix \\\"src/**/*.css\\\"\" \"textlint -c \\\"./textlint.config.cjs\\\" --fix \\\"{README.md,src/**/*.md}\\\"\"",
 		"prepare": "husky",
 		"preview": "qwik build preview && vite preview --open",
 		"start": "vite --open --mode ssr",
