--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"eslint-plugin-qwik": "^1.4.5",
 		"husky": "^9.0.11",
 		"prettier": "^3.2.4",
+		"shiki": "^1.3.0",
 		"stylelint": "^16.2.1",
 		"stylelint-config-standard": "^36.0.0",
 		"stylelint-order": "^6.0.4",
