chore: Add commitlint.config.js to tsconfig.json
The commitlint.config.js file is now included in the project configuration. This change ensures that commitlint can check the sanity of the commit messages according to the specified rules.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
 		}
 	},
 	"files": [
+		"./commitlint.config.js",
 		"./eslint.config.cjs",
 		"./eslint.config.import.cjs",
 		"./stylelint.config.js",
