--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"eslint": "^8.56.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-import-access": "^2.2.0",
 		"eslint-plugin-qwik": "^1.4.5",
 		"husky": "^9.0.11",
 		"prettier": "^3.2.4",
