chore: "eslint-plugin-import-access" to project configuration
The "eslint-plugin-import-access" has been added to both tsconfig.json and eslint.config.import.cjs files. This plugin helps to manage and enforce the access rules on modules.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
 		"types": ["node", "vite/client"],
 		"paths": {
 			"~/*": ["./src/*"]
-		}
+		},
+		"plugins": [{ "name": "eslint-plugin-import-access" }]
 	},
 	"files": [
 		"./commitlint.config.js",
