refactor: Update ignore paths in biome.json
The "ignore" paths in the biome.json file have been updated. The "./" before each directory has been removed as it was redundant and could potentially cause issues in path resolution.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/biome.json
+++ b/biome.json
@@ -5,10 +5,10 @@
 	},
 	"files": {
 		"ignore": [
-			"./dist",
-			"./lib",
-			"./lib-types",
-			"./server",
+			"dist",
+			"lib",
+			"lib-types",
+			"server",
 			"node_modules",
 			"*.local",
 			".cache",
