--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@types/node": "^20.11.6",
 		"@typescript-eslint/eslint-plugin": "^6.19.1",
 		"@typescript-eslint/parser": "^6.19.1",
+		"better-typescript-lib": "^2.7.0",
 		"concurrently": "^8.2.2",
 		"eslint": "^8.56.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
