--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,5 @@
 		"./textlint.config.cjs",
 		"./vite.config.ts"
 	],
-	"include": ["src", "./*.d.ts"]
+	"include": ["src", "./*.d.ts", "node_modules/better-typescript-lib/node_modules/@typescript/**/*.d.ts"]
 }
