--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"eslint-plugin-qwik": "^1.4.5",
 		"husky": "^9.0.11",
 		"prettier": "^3.2.4",
+		"prettier-plugin-scaffdog": "^4.0.0",
 		"scaffdog": "^4.0.0",
 		"stylelint": "^16.2.1",
 		"stylelint-config-standard": "^36.0.0",
