chore: Update the .gitignore and configuration files
This commit updates the .gitignore, biome.json, .textlintignore, .eslintignore, .prettierignore, and .stylelintignore files. The change includes moving the .yarn ignore rules nearer to the 'Development' rules and repositioning the .DS_Store ignore rules under the 'Other' section for better organization and readability.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/.eslintignore
+++ b/.eslintignore
@@ -7,6 +7,8 @@
 # Development
 node_modules
 *.local
+.yarn/*
+!.yarn/releases
 
 # Cache
 .cache
@@ -26,12 +28,11 @@ lerna-debug.log*
 # Editor
 .vscode/*
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-# Yarn
-.yarn/*
+# Other
+.DS_Store
