--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # Development
 node_modules
 *.local
+.yarn/*
+!.yarn/releases
 
 # Cache
 .cache
@@ -28,13 +30,11 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/*.code-snippets
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-# Yarn
-.yarn/*
-!.yarn/releases
+# Other
+.DS_Store
