--- a/.textlintignore
+++ b/.textlintignore
@@ -18,6 +18,8 @@ node_modules
 *.json
 *.jsonc
 *.*rc
+.yarn/*
+!.yarn/releases
 
 # Cache
 .cache
@@ -37,12 +39,11 @@ lerna-debug.log*
 # Editor
 .vscode/*
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-# Yarn
-.yarn/*
+# Other
+.DS_Store
