--- a/biome.json
+++ b/biome.json
@@ -15,6 +15,8 @@
 			".mf",
 			".rollup.cache",
 			"tsconfig.tsbuildinfo",
+			".yarn/*",
+			"!.yarn/releases",
 			"logs",
 			"*.log",
 			"npm-debug.log*",
@@ -24,14 +26,12 @@
 			"lerna-debug.log*",
 			".vscode/*",
 			".idea",
-			".DS_Store",
 			"*.suo",
 			"*.ntvs*",
 			"*.njsproj",
 			"*.sln",
 			"*.sw?",
-			".yarn/*",
-			"!.yarn/releases"
+			".DS_Store"
 		]
 	},
 	"linter": {
