chore: Update ignored files in .gitignore and other config files
This commit refines the ignore settings for .idea directory in .gitignore, .eslintignore, .prettierignore, .stylelintignore, .textlintignore, and biome.json files. Instead of ignoring the entire .idea directory, it specifically ignores workspace.xml, usage.statistics.xml, and shelf under .idea directory.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ lerna-debug.log*
 .vscode/*
 !.vscode/launch.json
 !.vscode/*.code-snippets
-.idea
+.idea/workspace.xml
+.idea/usage.statistics.xml
+.idea/shelf
 *.suo
 *.ntvs*
 *.njsproj
