--- a/biome.json
+++ b/biome.json
@@ -25,7 +25,9 @@
 			"pnpm-debug.log*",
 			"lerna-debug.log*",
 			".vscode/*",
-			".idea",
+			".idea/workspace.xml",
+			".idea/usage.statistics.xml",
+			".idea/shelf",
 			"*.suo",
 			"*.ntvs*",
 			"*.njsproj",
