--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"@fontsource/fira-code": "^5.0.16",
 		"@modular-forms/qwik": "^0.24.0",
 		"@unocss/reset": "^0.58.5",
-		"remixicon": "^4.1.0"
+		"remixicon": "^4.1.0",
+		"resend": "^3.2.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.6.1",
