chore: Reposition node_modules in .gitignore
The 'node_modules' directory is now ignored under the 'deps' section instead of 'dev'. This change was made to improve the organization of the .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # dev
-node_modules
 *.local
 .yarn/*
 !.yarn/releases
@@ -20,6 +19,9 @@ node_modules
 /lib
 /lib-types
 /server
+
+# deps
+node_modules
 
 # cache
 .cache
