--- a/.textlintignore
+++ b/.textlintignore
@@ -1,12 +1,4 @@
-# Build
-/dist
-/lib
-/lib-types
-/server
-
-# Development
-node_modules
-*.local
+# prevent linter conflicts
 *.js
 *.cjs
 *.mjs
@@ -18,17 +10,38 @@ node_modules
 *.json
 *.jsonc
 *.*rc
-.yarn/*
-!.yarn/releases
 
-# Cache
-.cache
+# dev
+.yarn/
+!.yarn/releases
+.vscode/*
+!.vscode/launch.json
+!.vscode/*.code-snippets
+.idea/workspace.xml
+.idea/usage.statistics.xml
+.idea/shelf/
+
+# build
+dist/
+lib/
+lib-types/
+server/
+
+# deps
+node_modules/
+
+# cache
+.cache/
 .mf
 .rollup.cache
 tsconfig.tsbuildinfo
 
-# Logs
-logs
+# env
+.env
+.env.production
+
+# logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -36,16 +49,5 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Editor
-.vscode/*
-.idea/workspace.xml
-.idea/usage.statistics.xml
-.idea/shelf
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Other
+# misc
 .DS_Store
