--- a/biome.json
+++ b/biome.json
@@ -5,34 +5,32 @@
 	},
 	"files": {
 		"ignore": [
-			"dist",
-			"lib",
-			"lib-types",
-			"server",
-			"node_modules",
-			"*.local",
-			".cache",
+			".yarn/",
+			"!.yarn/releases",
+			".vscode/*",
+			"!.vscode/launch.json",
+			"!.vscode/*.code-snippets",
+			".idea/workspace.xml",
+			".idea/usage.statistics.xml",
+			".idea/shelf/",
+			"dist/",
+			"lib/",
+			"lib-types/",
+			"server/",
+			"node_modules/",
+			".cache/",
 			".mf",
 			".rollup.cache",
 			"tsconfig.tsbuildinfo",
-			".yarn/*",
-			"!.yarn/releases",
-			"logs",
+			".env",
+			".env.production",
+			"logs/",
 			"*.log",
 			"npm-debug.log*",
 			"yarn-debug.log*",
 			"yarn-error.log*",
 			"pnpm-debug.log*",
 			"lerna-debug.log*",
-			".vscode/*",
-			".idea/workspace.xml",
-			".idea/usage.statistics.xml",
-			".idea/shelf",
-			"*.suo",
-			"*.ntvs*",
-			"*.njsproj",
-			"*.sln",
-			"*.sw?",
 			".DS_Store"
 		]
 	},
