chore(deps): Add Shiki to dependencies
An additional dependency, Shiki, has been added to the package.json file. This update indicates that the application now requires version "^1.10.3" of Shiki to function properly.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"@modular-forms/qwik": "^0.26.0",
 		"@unocss/reset": "^0.61.0",
 		"remixicon": "^4.1.0",
-		"resend": "^3.2.0"
+		"resend": "^3.2.0",
+		"shiki": "^1.10.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.6.1",
