--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.6.1",
+		"@builder.io/vite-plugin-macro": "~0.0.7",
 		"@commitlint/cli": "^19.2.2",
 		"@commitlint/config-conventional": "^19.2.2",
+		"@pandacss/dev": "^0.36.1",
 		"@textlint-rule/textlint-rule-no-duplicate-abbr": "^1.0.2",
 		"@textlint-rule/textlint-rule-no-unmatched-pair": "^2.0.2",
 		"@types/eslint": "^8.56.2",
