--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,6 @@
 		"textlint.config.cjs",
 		"vite.config.ts"
 	],
-	"include": ["src", "*.d.ts", "node_modules/better-typescript-lib/node_modules/@typescript/**/*.d.ts"]
+	"include": ["src", "*.d.ts", "node_modules/better-typescript-lib/node_modules/@typescript/**/*.d.ts"],
+	"exclude": ["src/styled-system/"]
 }
