chore: Add Panda CSS configuration and integrate with Qwik
Added `panda.config.ts` for Panda CSS settings and updated Vite config to include `@builder.io/vite-plugin-macro`.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,8 @@
 		"eslint.config.import.cjs",
 		"stylelint.config.js",
 		"stylelint.config.order.js",
+		"panda.config.ts",
+		"postcss.config.js",
 		"prettier.config.js",
 		"textlint.config.cjs",
 		"vite.config.ts"
