--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"eslint-plugin-import-access": "^2.2.0",
 		"eslint-plugin-qwik": "^1.4.5",
 		"husky": "^9.0.11",
+		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.2.4",
 		"prettier-plugin-scaffdog": "^4.0.0",
 		"scaffdog": "^4.0.0",
