chore(lint): Expand TypeScript paths and update ESLint grouping
Added a new path mapping for 'styled-system' in `tsconfig.json` to streamline imports.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
 		"types": ["node", "vite/client"],
 		"baseUrl": ".",
 		"paths": {
-			"~/*": ["src/*"]
+			"~/*": ["src/*"],
+			"styled-system/*": ["src/styled-system/*"]
 		},
 		"plugins": [{ "name": "eslint-plugin-import-access" }]
 	},
