--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,18 +25,16 @@
 		},
 		"plugins": [{ "name": "eslint-plugin-import-access" }]
 	},
-	"files": [
-		"commitlint.config.js",
-		"eslint.config.cjs",
-		"eslint.config.import.cjs",
-		"stylelint.config.js",
-		"stylelint.config.order.js",
-		"panda.config.ts",
-		"postcss.config.js",
-		"prettier.config.js",
-		"textlint.config.cjs",
-		"vite.config.ts"
+	"include": [
+		"**/*.js",
+		"**/*.cjs",
+		"**/*.mjs",
+		"**/*.ts",
+		"**/*.jts",
+		"**/*.mts",
+		"**/*.jsx",
+		"**/*.tsx",
+		"node_modules/better-typescript-lib/node_modules/@typescript/**/*.d.ts"
 	],
-	"include": ["src", "*.d.ts", "node_modules/better-typescript-lib/node_modules/@typescript/**/*.d.ts"],
-	"exclude": ["src/styled-system/"]
+	"exclude": ["src/styled-system/", "dist"]
 }
