--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
 		"@builder.io/vite-plugin-macro": "~0.0.7",
 		"@commitlint/cli": "^19.2.2",
 		"@commitlint/config-conventional": "^19.2.2",
+		"@eslint/js": "^9.13.0",
 		"@pandacss/dev": "^0.46.0",
 		"@textlint-rule/textlint-rule-no-duplicate-abbr": "^1.0.2",
 		"@textlint-rule/textlint-rule-no-unmatched-pair": "^2.0.2",
 		"@types/eslint": "^8.56.2",
+		"@types/eslint__js": "^8.42.3",
 		"@types/node": "^22.0.0",
 		"@typescript-eslint/eslint-plugin": "^8.0.0",
 		"@typescript-eslint/parser": "^8.0.0",
@@ -53,6 +55,7 @@
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-import-access": "^2.2.0",
 		"eslint-plugin-qwik": "^1.4.5",
+		"globals": "^15.11.0",
 		"husky": "^9.0.11",
 		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.2.4",
@@ -74,6 +77,7 @@
 		"textlint-rule-preset-japanese": "^10.0.3",
 		"textlint-rule-preset-jtf-style": "^2.3.14",
 		"typescript": "5.6.3",
+		"typescript-eslint": "^8.10.0",
 		"undici": "*",
 		"vite": "^5.0.12",
 		"vite-tsconfig-paths": "^5.0.0"
