chore(compiler): Add configuration files to TypeScript include paths
Included various build and lint config files in the TypeScript configuration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,17 @@
 		"plugins": [{ "name": "eslint-plugin-import-access" }]
 	},
 	"include": [
+		".scaffdog/config.js",
+		"eslint.config.js",
+		"eslint.config.*.js",
+		"panda.config.ts",
+		"panda.config.*.ts",
+		"postcss.config.js",
+		"prettier.config.js",
+		"stylelint.config.js",
+		"stylelint.config.*.js",
+		"textlint.config.js",
+		"vite.config.ts",
 		"node_modules/better-typescript-lib/node_modules/@typescript/**/*.d.ts",
 		"**/*.js",
 		"**/*.cjs",
