chore(scripts): Enable ESLint caching for faster linting
Added ESLint caching with a custom cache location to the lint and lint.fix scripts in package.json.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
 		"format": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier --write .\" \"bunx @biomejs/biome format --write .\"",
 		"format.check": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier --check .\" \"bunx @biomejs/biome format .\"",
-		"lint": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#FFF,#259EAC\" \"eslint .\" \"bunx @biomejs/biome lint .\" \"stylelint \\\"**/*.css\\\"\" \"textlint -c \\\"./textlint.config.cjs\\\" \\\"**/*.md\\\"\"",
-		"lint.fix": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#FFF,#259EAC\" \"eslint --fix .\" \"bunx @biomejs/biome lint --write .\" \"stylelint --fix \\\"**/*.css\\\"\" \"textlint -c \\\"./textlint.config.cjs\\\" --fix \\\"**/*.md\\\"\"",
+		"lint": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#FFF,#259EAC\" \"eslint --cache --cache-location ./node_modules/.cache/eslint .\" \"bunx @biomejs/biome lint .\" \"stylelint \\\"**/*.css\\\"\" \"textlint -c \\\"./textlint.config.cjs\\\" \\\"**/*.md\\\"\"",
+		"lint.fix": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#FFF,#259EAC\" \"eslint --cache --cache-location ./node_modules/.cache/eslint --fix .\" \"bunx @biomejs/biome lint --write .\" \"stylelint --fix \\\"**/*.css\\\"\" \"textlint -c \\\"./textlint.config.cjs\\\" --fix \\\"**/*.md\\\"\"",
 		"prebuild.pandacss": "panda codegen --silent",
 		"prepare": "husky",
 		"preview": "qwik build preview && vite preview --open",
