--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 		"better-typescript-lib": "^2.7.0",
 		"concurrently": "^9.0.0",
 		"eslint": "^8.56.0",
-		"eslint-config-flat-gitignore": "^0.3.0",
+		"eslint-config-flat-gitignore": "0.2.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-import-access": "^2.2.0",
