chore(linter/formatter): Enable VCS integration and use .gitignore in biome.json
Switched VCS settings to enable version control system integration and set the client kind to Git.

--- a/biome.json
+++ b/biome.json
@@ -3,37 +3,10 @@
 	"organizeImports": {
 		"enabled": false
 	},
-	"files": {
-		"ignore": [
-			".yarn/",
-			"!.yarn/releases",
-			".vscode/*",
-			"!.vscode/launch.json",
-			"!.vscode/*.code-snippets",
-			".idea/workspace.xml",
-			".idea/usage.statistics.xml",
-			".idea/shelf/",
-			"src/styled-system/",
-			"dist/",
-			"lib/",
-			"lib-types/",
-			"server/",
-			"node_modules/",
-			".cache/",
-			".mf",
-			".rollup.cache",
-			"tsconfig.tsbuildinfo",
-			".env",
-			".env.production",
-			"logs/",
-			"*.log",
-			"npm-debug.log*",
-			"yarn-debug.log*",
-			"yarn-error.log*",
-			"pnpm-debug.log*",
-			"lerna-debug.log*",
-			".DS_Store"
-		]
+	"vcs": {
+		"enabled": true,
+		"clientKind": "git",
+		"useIgnoreFile": true
 	},
 	"linter": {
 		"enabled": true,
