--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
 		"build.types": "tsc --incremental --noEmit",
 		"deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
 		"dev": "vite --mode ssr",
-		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+		"dev.debug": "node --inspect-brk node_modules/vite/bin/vite.js --mode ssr --force",
 		"format": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier . --write\" \"bunx @biomejs/biome format . --write\"",
 		"format.check": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier . --check\" \"bunx @biomejs/biome format .\"",
-		"lint": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#7A8387,#259EAC\" \"eslint --cache --cache-location ./node_modules/.cache/eslint .\" \"bunx @biomejs/biome lint .\" \"stylelint --ignore-path \\\"./.gitignore\\\" \\\"**/*.css\\\"\" \"textlint -c \\\"./textlint.config.cjs\\\" --ignore-path \\\"./.gitignore\\\" \\\"**/*.md\\\"\"",
-		"lint.fix": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#7A8387,#259EAC\" \"eslint --cache --cache-location ./node_modules/.cache/eslint . --fix\" \"bunx @biomejs/biome lint . --write\" \"stylelint --ignore-path \\\"./.gitignore\\\" \\\"**/*.css\\\" --fix\" \"textlint -c \\\"./textlint.config.cjs\\\" --ignore-path \\\"./.gitignore\\\" \\\"**/*.md\\\" --fix\"",
+		"lint": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#7A8387,#259EAC\" \"eslint --cache --cache-location node_modules/.cache/eslint .\" \"bunx @biomejs/biome lint .\" \"stylelint --ignore-path \\\".gitignore\\\" \\\"**/*.css\\\"\" \"textlint -c \\\"textlint.config.cjs\\\" --ignore-path \\\".gitignore\\\" \\\"**/*.md\\\"\"",
+		"lint.fix": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#7A8387,#259EAC\" \"eslint --cache --cache-location node_modules/.cache/eslint . --fix\" \"bunx @biomejs/biome lint . --write\" \"stylelint --ignore-path \\\".gitignore\\\" \\\"**/*.css\\\" --fix\" \"textlint -c \\\"textlint.config.cjs\\\" --ignore-path \\\".gitignore\\\" \\\"**/*.md\\\" --fix\"",
 		"prebuild.pandacss": "panda codegen --silent",
 		"prepare": "husky & panda codegen",
 		"preview": "qwik build preview && vite preview --open",
