chore(compiler): Include commitlint.config.js in tsconfig.json
Added commitlint.config.js to the include array in tsconfig.json to ensure TypeScript recognizes and processes it.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
 	},
 	"include": [
 		".scaffdog/config.js",
+		"commitlint.config.js",
 		"eslint.config.js",
 		"eslint.config.*.js",
 		"panda.config.ts",
