--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 		"baseUrl": ".",
 		"paths": {
 			"~/*": ["src/*"],
-			"styled-system/*": ["src/styled-system/*"]
+			"styled-system/*": ["registry/styled-system/*"]
 		},
 		"plugins": [{ "name": "eslint-plugin-import-access" }]
 	},
