style: Format engines field in package.json
The modification reformats the "engines" field to be more concise in its JSON representation.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
 	"name": "taichi-fukuda",
 	"description": "This is a personal website of Taichi Fukuda.",
-	"engines": {
-		"node": ">=15.0.0"
-	},
+	"engines": { "node": ">=15.0.0" },
 	"private": true,
 	"type": "module",
 	"scripts": {
