--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"compile": "tsc --incremental --noEmit",
 		"lint": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#7A8387,#259EAC\" \"eslint --cache --cache-location node_modules/.cache/eslint .\" \"bunx @biomejs/biome lint .\" \"stylelint --ignore-path \\\".gitignore\\\" \\\"**/*.css\\\"\" \"textlint -c \\\"textlint.config.cjs\\\" --ignore-path \\\".gitignore\\\" \\\"**/*.md\\\"\"",
 		"lint.fix": "concurrently -n \"eslint,biome,stylelint,textlint\" -c \"#4831BD,#61A5FA,#7A8387,#259EAC\" \"eslint --cache --cache-location node_modules/.cache/eslint . --fix\" \"bunx @biomejs/biome lint . --write\" \"stylelint --ignore-path \\\".gitignore\\\" \\\"**/*.css\\\" --fix\" \"textlint -c \\\"textlint.config.cjs\\\" --ignore-path \\\".gitignore\\\" \\\"**/*.md\\\" --fix\"",
-		"format": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier . --write\" \"bunx @biomejs/biome format . --write\"",
-		"format.check": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier . --check\" \"bunx @biomejs/biome format .\"",
+		"format": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier --cache . --write\" \"bunx @biomejs/biome format . --write\"",
+		"format.check": "concurrently -n \"prettier,biome\" -c \"#F8BC45,#61A5FA\"  \"prettier --cache . --check\" \"bunx @biomejs/biome format .\"",
 		"prepare": "husky && panda codegen"
 	},
 	"dependencies": {
