--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@commitlint/config-conventional": "^19.2.2",
 		"@eslint/js": "^9.13.0",
 		"@pandacss/dev": "^0.46.0",
+		"@pandacss/eslint-plugin": "^0.2.2",
 		"@textlint-rule/textlint-rule-no-duplicate-abbr": "^1.0.2",
 		"@textlint-rule/textlint-rule-no-unmatched-pair": "^2.0.2",
 		"@types/eslint": "^8.56.2",
