style(format): Format engines field in package.json
This commit reformats the "engines" field for better readability without changing any functionality.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"name": "taichi-fukuda",
 	"description": "This is a personal website of Taichi Fukuda.",
-	"engines": { "bun": ">=1.1.34" },
+	"engines": {
+		"bun": ">=1.1.34"
+	},
 	"private": true,
 	"type": "module",
 	"scripts": {
