--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,5 +42,5 @@
 		"**/*",
 		"**/.*/**/*"
 	],
-	"exclude": ["registry/styled-system/", "dist"]
+	"exclude": ["registry/styled-system/", "dist", "server/"]
 }
