refactor(compiler): Fix exclude paths in tsconfig.json
Standardized directory exclusions by appending trailing slashes to align with consistent path formatting.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,5 +42,5 @@
 		"**/*",
 		"**/.*/**/*"
 	],
-	"exclude": ["registry/styled-system/", "dist", "server/"]
+	"exclude": ["registry/styled-system/", "dist/", "server/"]
 }
