refactor: Update `tsconfig.json` to reorganize and refine paths
Moved `include` and `exclude` settings outside `compilerOptions` for clarity and better structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,22 @@
 {
+	"include": [
+		".scaffdog/config.js",
+		"commitlint.config.js",
+		"eslint.config.js",
+		"eslint.config.*.js",
+		"panda.config.ts",
+		"panda.config.*.ts",
+		"postcss.config.js",
+		"prettier.config.js",
+		"stylelint.config.js",
+		"stylelint.config.*.js",
+		"textlint.config.js",
+		"vite.config.ts",
+		"node_modules/better-typescript-lib/node_modules/@typescript/**/*.d.ts",
+		"**/*",
+		"**/.*/**/*"
+	],
+	"exclude": ["registry/styled-system/", "dist/", "server/"],
 	"compilerOptions": {
 		"checkJs": true,
 		"allowJs": true,
@@ -24,23 +42,5 @@
 			"styled-system/*": ["registry/styled-system/*"]
 		},
 		"plugins": [{ "name": "eslint-plugin-import-access" }]
-	},
-	"include": [
-		".scaffdog/config.js",
-		"commitlint.config.js",
-		"eslint.config.js",
-		"eslint.config.*.js",
-		"panda.config.ts",
-		"panda.config.*.ts",
-		"postcss.config.js",
-		"prettier.config.js",
-		"stylelint.config.js",
-		"stylelint.config.*.js",
-		"textlint.config.js",
-		"vite.config.ts",
-		"node_modules/better-typescript-lib/node_modules/@typescript/**/*.d.ts",
-		"**/*",
-		"**/.*/**/*"
-	],
-	"exclude": ["registry/styled-system/", "dist/", "server/"]
+	}
 }
